<resources>
    <string name="app_name">万易通</string>
    <string name="network_is_break">当前网络不可用</string>
    <string name="main_country">杭州</string>
    <string name="main_government">政府部门</string>
    <string name="hardware_building">五金建材</string>
    <string name="an_electric_appliance">家用电器</string>
    <string name="restaurant">餐饮美食</string>
    <string name="logistics_express">物流快递</string>
    <string name="digital">电脑数码</string>
    <string name="car_service">汽车服务</string>
    <string name="clothes">服装鞋帽</string>
    <string name="recommendlist">推荐列表</string>
    <string name="homebtn">首页</string>
    <string name="prizebtn">抽奖</string>
    <string name="userbtn">我的</string>
    <string name="morebtn">更多</string>
    <string name="login_title">万易通▪登录</string>
    <string name="register_title">万易通▪注册</string>
    <string name="tip_input_login">请输入用户名/邮箱/手机号</string>
    <string name="tip_input_password">请输入密码</string>
    <string name="tip_input_register_email">请输入邮箱</string>
    <string name="mimaT">修改密码</string>
    <string name="leixing">会员类型：</string>
    <string name="yonghu">商家用户</string>
    <string name="huiyuan">会员中心</string>
    <string name="yanzhemg">验证客户二维码</string>
    <string name="zhongjiangT">我的中奖</string>
    <string name="jfmxT">积分明细</string>
    <string name="jftxT">积分提现</string>
    <string name="publishbusiness">发布我的店铺</string>
    <string name="zixunT">万易通资询</string>
    <string name="choujiangT">抽奖</string>
    <string name="gerenT">个人中心</string>
    <string name="name">赵辉</string>
    <string name="id">ID：521</string>
    <string name="shu">丨</string>
    <string name="submit_review">立即提交审核</string>
    <string name="publish_new_merchant">发布新商家</string>
    <string name="publish_new_merchant_name">您的店铺名称</string>
    <string name="publish_new_merchant_telphone">手机号</string>
    <string name="publish_new_merchant_qq">QQ号</string>
    <string name="publish_new_merchant_weixin">微信号</string>
    <string name="publish_new_merchant_addrss">详细地址</string>
    <string name="publish_upload_desp">普通用户只可以上传一张介绍图</string>
    <string name="publish_upload_tip">您的店铺描述请升级成为商家后方可填写，请联系18931333370</string>
    <string name="please_select">请选择</string>
    <string name="luckdraw_title">万易通-抽奖中心</string>
    <string name="luckdraw_msg0">万易通 给你发了一个宝箱</string>
    <string name="luckdraw_msg1">您还有%d次抽奖机会，抽奖时间：%s</string>
    <string name="luckdraw_msg2">您的抽奖机会已经用完了</string>
    <string name="luckdraw_msg3">您的机会用完了，或者抽奖时间未到！</string>
    <string name="luckdraw_msg4">恭喜您获得由[%s]提供的[%s]一份！发放成功</string>
    <string name="luckdraw_btn0">查看中奖详情</string>
</resources>
