<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/government_sector"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_government"
                android:gravity="center"
                android:layout_below="@id/main_func_btn0"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hardware_building"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hardware_building"
                android:gravity="center"
                android:layout_below="@id/main_func_btn1"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/an_electric_appliance"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/an_electric_appliance"
                android:gravity="center"
                android:layout_below="@id/main_func_btn2"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/restaurant"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                android:gravity="center"
                android:layout_below="@id/main_func_btn3"/>

        </RelativeLayout>


    </LinearLayout>
    <!--down-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logistics_express"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logistics_express"
                android:gravity="center"
                android:layout_below="@id/main_func_btn4"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/digital"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digital"
                android:gravity="center"
                android:layout_below="@id/main_func_btn5"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/car_service"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_service"
                android:gravity="center"
                android:layout_below="@id/main_func_btn6"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/main_func_btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clothes"
                android:layout_centerHorizontal="true"
                style="@style/Base.Widget.AppCompat.Button.ImageButton0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clothes"
                android:gravity="center"
                android:layout_below="@id/main_func_btn7"/>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
