<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/titlebar_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_title"
            android:textColor="#ffffff"
            android:textSize="20dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <!--密码、账号-->
            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editor_height"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editor_text_conner"
                    android:hint="@string/tip_input_login" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editor_height"
                    android:layout_below="@id/username"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/editor_text_conner"
                        android:hint="@string/tip_input_password"
                        android:inputType="textPassword"
                        android:textColor="#bbbbbb" />

                    <CheckBox
                        android:id="@+id/password_checkbtn"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="4dp"
                        android:background="@drawable/login_selecor"
                        android:button="@null" />
                </RelativeLayout>
            </RelativeLayout>
            <!--登录按钮-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relative"
                android:layout_marginTop="100dp"
                android:layout_weight="5">

                <Button
                    android:id="@+id/button_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/login_selecor_a"
                    android:text="用户登录"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/button_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_a"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/editor_text_2"
                    android:button="@null"
                    android:text="没有账号？立即注册"
                    android:textColor="#ffffff" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>
